--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,14 +46,14 @@
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://mobile.twitter.com/harveysilass"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/assets?search%5Bquery%5D=Space_Chimps_"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -71,7 +71,7 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The SpaceChimps NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
         </p>
       </div>
     </section>
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://opensea.io/assets?search%5Bquery%5D=Space_Chimps_"
           target="_blank"
           rel="noopener noreferrer"
         >
